<resources>
    <string name="app_name">Just Quizz</string>
    <string name="main_activity_text1">Загрузите новый тест на ваше устройство: </string>
    <string name="main_activity_text2">Либо выберите один из загруженных тестов. И нажмите \"Начать тест\". Успехов! </string>
    <string name="text_make_choice">Выбери один из тестов:</string>
    <string name="button_start_test">Начать тест</string>
    <string name="button_download_test">Загрузить тесты</string>
    <string name="delete_test">Удалить тест?</string>


    <string name="action_settings">Настройки</string>
    <string name="download_test_from_server">Загрузить тесты</string>
    <string name="show_first_start">Окно первого запуска</string>
    <string name="how_to">Как пользоваться?</string>


    <string name="about_title">О программе</string>


    <string name="button_answer">Ответить</string>
    <string name="button_next">Далее</string>
    <string name="button_previous">Назад</string>
    <string name="nameQuestion">Здесь выведен вопрос</string>
    <string name="text_number_of_question">Вопрос №</string>
    <string name="timer">--:--</string>
    <string name="toast_must_make_choice">Вам нужно выбрать хотя бы один вариант ответа</string>
    <string name="string_do_u_wanna_finish_test">Закрыть тест?</string>
    <string name="string_yes">Да</string>
    <string name="string_no">Нет</string>



    <string name="checkBox1">1.</string>
    <string name="checkBox2">2.</string>
    <string name="checkBox3">3.</string>
    <string name="checkBox4">4.</string>



    <string name="text_your_result">Ваши результаты:</string>
    <string name="button_close">Закрыть</string>
    <string name="button_finish">Завершить</string>
    <string name="text_your_choice"> вариант </string>

    <string name="button_download">Загрузить</string>
    <string name="button_back">Назад</string>
    <string name="toast_download_start">Загрузка теста</string>
    <string name="toast_download_success">Загрузка завершена</string>
    <string name="toast_test_exist">Тест был загружен ранее</string>
    <string name="press_key">Для загрузки нажми кнопку</string>
    <string name="download_manager">Загрузчик новых тестов</string>
    <string name="choice_category">Тесты делятся по категориям, выбери ту, которая тебе интересна:</string>
    <string name="text_description">Описание категории с тестами:</string>


    <string name="error_server_not_found">Сервер не найден, проверьте ваше интернет соединение.</string>

    <string name="directoryMD5">/justquizz/tests/</string>
    <string name="file_extension">.jqzz</string>

    <string name="how_to_info">Описание всего проекта \n \n
        Вы бы хотели поделиться своими знаниями с другими людьми? \n \n
        Просто потому, что вам этого хочется. Хочется, но вы не знаете как.
        Тогда воспользуйтесь нашим сервисом Just Quizz - образовательные тесты. \n \n
        На нашем сайте lightapp.ru/justquizz вы можете составить тест. Сервер его запомнит.
        И затем любой желающий сможет его загрузить на свой телефон с помощью приложения Just Quizz \n \n
        Как видите, все просто. \n \n
        Вам, как автору теста, будет доступна его статистика. Например, сколько раз тест был скачан,
        процент правильных ответов и так далее. \n \n
    </string>


    <string name="first_start_text1">Добрый день! \n \n
        Данное приложение позволяет запускать на вашем устройстве образовательные тесты. \n
        Тесты находятся на нашем сервере и сначала их нужно загрузить в память телефона. \n
        Тесты делятся на разные категории. Выберите ту, которая вам наиболее интересна. \n \n
        Вы можете скачать себе сразу все тесты из категории "Демонстрационные тесты":
    </string>
    <string name="first_start_button_download_demo_tests">Загрузить демонстрационные тесты</string>
    <string name="first_start_text2">Либо самостоятельно выбрать понравившийся тест:</string>
    <string name="first_start_button_download_tests">Самостоятельно выбрать тесты</string>
    <string name="first_start_text3">В любом случае мы желаем вам успехов в обучении!</string>


</resources>
