<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_question_field" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nameQuestion"
            android:id="@+id/nameQuestion"
            android:layout_weight="0.16" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/timer"
            android:id="@+id/timer" />


    </LinearLayout>




    <CheckBox
        style="@style/Checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox1"
        android:id="@+id/checkBox1"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:checked="false" />

    <CheckBox
        style="@style/Checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox2"
        android:id="@+id/checkBox2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:checked="false" />

    <CheckBox
        style="@style/Checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox3"
        android:id="@+id/checkBox3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:checked="false" />

    <CheckBox
        style="@style/Checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox4"
        android:id="@+id/checkBox4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16"
        android:checked="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_previous"
            android:id="@+id/button_previous"
            android:onClick="onClickPrevious" />

        <Button
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_answer"
            android:id="@+id/button_next"
            android:onClick="onClickNext" />

    </LinearLayout>

</LinearLayout>